# stardraw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Config.cmake  Dependencies.cmake  Sources.cmake
sources/glad/: CMakeLists.txt
sources/glad/include/glad/: glad.h
sources/glad/src/: glad.cpp
sources/stardraw/: CMakeLists.txt
sources/stardraw-demo/: CMakeLists.txt  main.cpp  shader.slang
sources/stardraw/api/: api_impl.cpp  api_impl.hpp  commands.hpp  common.hpp  descriptors.hpp  memory_transfer.hpp  pipeline.cpp  pipeline.hpp  polymorphic_list.hpp  polymorphic_ptr.hpp  render_context.hpp  shader_parameter_value.hpp  shaders.hpp  types.hpp  window.hpp
sources/stardraw/gl45/: api_conversion.hpp  commands.cpp  commands_impl.cpp  common.hpp  gl45_impl.cpp  gl45_impl.hpp  gl45_render_context.cpp  gl45_render_context.hpp  gl45_window.cpp  gl45_window.hpp  gl_45_window.cpp  gl_45_window.hpp  memory_barrier_controller.hpp  memory_transfers.cpp  object_creation.cpp  object_states.cpp  object_states.hpp  render_context.cpp  render_context.hpp  staging_buffer_uploader.cpp  staging_buffer_uploader.hpp  state_binding.cpp  types.hpp  window.cpp  window.hpp
sources/stardraw/gl45/object_states/: buffer_state.cpp  buffer_state.hpp  draw_specification_state.cpp  draw_specification_state.hpp  framebuffer_state.cpp  framebuffer_state.hpp  shader_state.cpp  shader_state.hpp  texture_sampler_state.cpp  texture_sampler_state.hpp  texture_state.cpp  texture_state.hpp  transfer_buffer_state.cpp  transfer_buffer_state.hpp  vertex_specification_state.cpp  vertex_specification_state.hpp
sources/stardraw/internal/: api_impl.cpp  glfw_window.cpp  glfw_window.hpp  internal.hpp  internal_types.hpp  memory_transfer.cpp  pipeline.cpp  render_context.cpp  shaders.cpp  simple_block_allocator.cpp  simple_block_allocator.hpp  slang.cpp  slang.hpp  window.cpp
sources/starwin/: CMakeLists.txt
sources/starwin/api/: input.hpp  window.hpp
sources/starwin/internal/: gl45_window.cpp  glfw_window.cpp  glfw_window.hpp  virtual_controller.cpp  virtual_keyboard.cpp  virtual_mouse.cpp  window.cpp
